--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 <footer>
   <div class="footer-sosyal-ikon">
     <ul>
-      <li><a href="https://github.com/hackup-org"><i class="fa fa-github-alt" aria-hidden="true"></i></a></li>
-      <li><a href="https://www.twitch.tv/hackuporg"><i class="fa fa-twitch" aria-hidden="true"></i></a></li>
-      <li><a href="https://t.me/hackuporg"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
+      <li><a href="https://github.com/imicodingclub"><i class="fa fa-github-alt" aria-hidden="true"></i></a></li>
+      <li><a href="https://twitter.com/imicodingclub"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+      <li><a href="https://t.me/imicodingclub"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
     </ul>
   </div>
 </footer>
